--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Modouyu.GitHub.io by modouyu</title>
   </head>
 
-  <body>
+  <body style="text-align:center">
     <a href="http://www.cnblogs.com/cnsevennight">点击进入</a>
   </body>
 </html>
