--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Modouyu.GitHub.io by modouyu</title>
+    <script language="javascript">
+      window.location.replace("http://www.cnblogs.com/cnsevennight");
+    </script>
+
   </head>
 
   <body style="text-align:center">
