--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Modouyu.GitHub.io by modouyu</title>
     <script language="javascript">
-      window.location.replace("http://www.cnblogs.com/cnsevennight");
+      //window.location.replace("http://www.cnblogs.com/cnsevennight");
     </script>
 
   </head>
