--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <script language="javascript">
       //window.location.replace("http://www.cnblogs.com/cnsevennight");
     </script>
-
+    <style type="text/css">
+        body{
+          line-height: 1.6;
+          font-family: "Helvetica Neue","Hiragino Sans GB","Microsoft YaHei","\9ED1\4F53",Arial,sans-serif;
+          font-size: 14px;
+        }
+        .div{
+          width:500px;
+          margin:auto auto;
+        }
+        .div a{
+          border-radius: 3px;
+          cursor: pointer;
+          background-color: #44b549;
+          border:1px solid #44b549;
+        }
+        .div a:hover{
+          background-color: #2f9833;
+        }
+    </style>
   </head>
 
-  <body style="text-align:center">
-    <a href="http://www.cnblogs.com/cnsevennight">点击进入</a>
+  <body>
+  
+      <div class="div">
+          <a href="http://www.cnblogs.com/cnsevennight">点击进入</a>
+      </div>
+    
   </body>
 </html>
