--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         .div{
           width:500px;
           margin:auto auto;
+          text-align:center;
         }
         .div a{
           border-radius: 3px;
