--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           text-align:center;
         }
         .div a{
+          padding: 5px 10px;
+          text-decoration: none;
+          color: #fff;
           border-radius: 3px;
           cursor: pointer;
           background-color: #44b549;
