--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         .div{
           width:500px;
           margin:auto auto;
+          margin-top:20px;
           text-align:center;
         }
         .div a{
