--- a/index.html
+++ b/index.html
@@ -20,16 +20,42 @@
           text-align:center;
         }
         .div a{
-          padding: 5px 10px;
-          text-decoration: none;
           color: #fff;
-          border-radius: 3px;
+          text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+          background-color: #60b044;
+          background-image: -webkit-linear-gradient(#8add6d, #60b044);
+          background-image: linear-gradient(#8add6d, #60b044);
+          background-repeat: repeat-x;
+          border-color: #5ca941;
+          position: relative;
+          display: inline-block;
+          padding: 7px 12px;
+          font-size: 13px;
+          font-weight: bold;
+          color: #333;
+          text-shadow: 0 1px 0 rgba(255,255,255,0.9);
+          white-space: nowrap;
+          vertical-align: middle;
           cursor: pointer;
-          background-color: #44b549;
-          border:1px solid #44b549;
+          background-color: #eee;
+          background-image: -webkit-linear-gradient(#fcfcfc, #eee);
+          background-image: linear-gradient(#fcfcfc, #eee);
+          background-repeat: repeat-x;
+          border: 1px solid #d5d5d5;
+          border-radius: 3px;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
+          -webkit-appearance: none;
         }
         .div a:hover{
-          background-color: #2f9833;
+          color: #fff;
+          background-color: #569e3d;
+          background-image: -webkit-linear-gradient(#79d858, #569e3d);
+          background-image: linear-gradient(#79d858, #569e3d);
+          background-repeat: repeat-x;
+          border-color: #4a993e;
         }
     </style>
   </head>
@@ -38,7 +64,7 @@
   
       <div class="div">
           <a href="http://www.cnblogs.com/cnsevennight">点击进入</a>
-      </div>
+      </div> 
     
   </body>
 </html>
