--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           text-align:center;
         }
         .div a{
+          text-decoration: none;
           color: #fff;
 text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 background-color: #60b044;
